# nexus

./: .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  README.md  SETUP_COMPLETE.md  docker-compose.yml  main.py  pyproject.toml  quick_setup.bat  requirements.txt  setup.cfg  setup.py  test_setup.py  web_app.py
.github/workflows/: ci.yml
src/nexus/: __init__.py  __main__.py  cli.py
src/nexus/core/: __init__.py  assistant.py  config.py  learning.py
src/nexus/utils/: __init__.py  helpers.py  logger.py
tests/: __init__.py  test_assistant.py
