[metadata]
name = nexus-ai-assistant
version = 1.0.0
description = An intelligent AI assistant for natural language processing and task automation
long_description = file: README.md
long_description_content_type = text/markdown
author = Nexus Team
author_email = support@nexus-ai.com
license = MIT
license_files = LICENSE
url = https://github.com/yourusername/nexus
project_urls =
    Bug Tracker = https://github.com/yourusername/nexus/issues
    Documentation = https://docs.nexus-ai.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    openai>=1.0.0
    ollama>=0.1.0
    requests>=2.31.0
    python-dotenv>=1.0.0
    pydantic>=2.0.0
    pydantic-settings>=2.0.0
    loguru>=0.7.0
    rich>=13.0.0

[options.packages.find]
where = src

[options.extras_require]
web =
    fastapi>=0.100.0
    uvicorn>=0.23.0
    streamlit>=1.25.0
    gradio>=3.40.0
nlp =
    nltk>=3.8.1
    spacy>=3.6.0
    transformers>=4.30.0
data =
    pandas>=2.0.0
    numpy>=1.24.0
dev =
    pytest>=7.4.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.4.0
    pre-commit>=3.3.0
all =
    nexus-ai-assistant[web,nlp,data,dev]

[options.entry_points]
console_scripts =
    nexus = nexus.cli:main
